--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,8 @@
+.keranjang:active {
+  color: black !important;
+  font-weight: bold;
+  border-bottom: 2px solid rgb(255, 239, 18);
+}
 .router-link-exact-active {
   color: black !important;
   font-weight: bold;
@@ -6,7 +11,13 @@
 #Logo-App {
   color: rgb(151, 224, 41) !important;
 }
-
 ::-webkit-scrollbar {
   display: none;
+}
+.btn-success {
+  background-color: rgb(89, 255, 18);
+  border: 0;
+}
+body {
+  scroll-behavior: smooth;
 }
