--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,7 +8,9 @@
   font-weight: bold;
   border-bottom: 2px solid greenyellow;
 }
-#Logo-App {
+
+#Logo-App,
+.text-succeed {
   color: rgb(151, 224, 41) !important;
 }
 ::-webkit-scrollbar {
@@ -18,6 +20,20 @@
   background-color: rgb(89, 255, 18);
   border: 0;
 }
+.btn-outline-succeed {
+  border: 1.2px solid rgb(89, 255, 18);
+  color: rgb(89, 255, 18);
+}
+.btn-outline-succeed:hover {
+  color: white;
+  background-color: rgb(89, 255, 18);
+}
 body {
   scroll-behavior: smooth;
+}
+.fw-bold {
+  font-weight: bold;
+}
+.img-detail img {
+  width: 100%;
 }
